--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "pg": "^8.0.2",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.6"
+  },
+  "devDependencies": {
+    "@babel/polyfill": "^7.8.7"
   }
 }
